# esp32_pbtx_lib

./: .gitmodules  CMakeLists.txt  esp32_pbtx_signature_provider.c  pbtx_client.c
include/: pbtx_client.h  pbtx_signature_provider.h
pbtx.pb/: CMakeLists.txt  pbtx-rpc.options  pbtx-rpc.proto  pbtx.options
